--- a/public/composer.json
+++ b/public/composer.json
@@ -1,5 +1,11 @@
 {
 	"require": {
-		"phpunit/phpunit": "3.7.24 - 4"
+		"phpunit/phpunit": "3.7.24 - 4",
+		"smarty/smarty": "~3.1"
+	},
+	"autoload": {
+		"psr-4": {
+			"Foo\\": "autoload/public/vendor"
+		}
 	}
 }
